--- a/templates/topic_modelling/layout.html
+++ b/templates/topic_modelling/layout.html
@@ -267,9 +267,9 @@
             <!-- /.navbar -->
 
             <!-- Main Sidebar Container -->
-            <aside class="main-sidebar r_aside elevation-4" style="position: fixed; background-color:#DCDCDC;">
-                <!-- Brand Logo -->
-                <header class="r_asideheader">
+            <!--aside class="main-sidebar r_aside elevation-4" style="position: fixed; background-color:#DCDCDC;">
+                <Brand Logo -->
+                <!-- header class="r_asideheader">
                     <a href="/" >
                         <img src="{% static 'oklabs_assets/img/id_logo.png' %}" id="title_1" class="mt-2 ml-3  d-none" style="height: 36px; width: 36px;" />
                         <div id="title_2">
@@ -279,8 +279,8 @@
                     </a>
                 </header>
 
-                <!-- Sidebar -->
-                <div class="sidebar p-0" style="background-color:#DCDCDC;">
+                < Sidebar -->
+                <!--div class="sidebar p-0" style="background-color:#DCDCDC;">
                     <nav class="">
                         <ul class="nav nav-pills nav-sidebar r_ul1 flex-column"  style="background-color:##DCDCDC;" data-widget="treeview" role="menu" data-accordion="false">
                             <li class="nav-item" style="background-color:#DCDCDC;">
@@ -351,11 +351,11 @@
                             </li>
                         </ul>
                     </nav>
-                    <!-- /.sidebar-menu -->
-                </div>
+                    < /.sidebar-menu >
+                </div-->
                 <!-- Scrollable modal -->
-                <!-- /.sidebar -->
-            </aside>
+                <!-- /.sidebar >
+            </aside-->
 
             <!-- Content Wrapper. Contains page content -->
             <div class="content-wrapper r_main2">
