--- a/templates/topic_modelling/generate_results.html
+++ b/templates/topic_modelling/generate_results.html
@@ -48,11 +48,11 @@ width: 150px;
 <main>
 
 <div class="topnav ">
-  <a class="" href="/topic_modelling/home">Create Project</a>
-  <a class=""  href="/topic_modelling/doc_rules">Select Document & Rules</a>
-  <a href="/topic_modelling/generate_concept">Generate Concept Seeds</a>
-  <a href="/topic_modelling/generate_thesarus">Generate Thesarus</a>
-  <a  class="active"  href="/topic_modelling/generate_results">Generate Results</a>
+  <a class="" href="/home">Create Project</a>
+  <a class=""  href="/doc_rules">Select Document & Rules</a>
+  <a href="/generate_concept">Generate Concept Seeds</a>
+  <a href="/generate_thesarus">Generate Thesarus</a>
+  <a  class="active"  href="/generate_results">Generate Results</a>
 </div>
      <a type="button"  class="btn  mt-3 btn-lg rounded-0 r_button mr-1 mb-4" onclick="show_key_words()" >Key Words</a>
     <a type="button" class="btn  btn-lg rounded-0 r_button mt-3 mr-1 mb-4 "  onclick="show_word_maps()">Word Maps</a>
