--- a/templates/topic_modelling/generate_thesarus.html
+++ b/templates/topic_modelling/generate_thesarus.html
@@ -48,11 +48,11 @@ width: 150px;
 <main>
 
 <div class="topnav ">
-  <a class="" href="/topic_modelling/home">Create Project</a>
-  <a class=""  href="/topic_modelling/doc_rules">Select Document & Rules</a>
-  <a href="/topic_modelling/generate_concept">Generate Concept Seeds</a>
-  <a class="active" href="/topic_modelling/generate_thesarus">Generate Thesarus</a>
-  <a  class=""  href="/topic_modelling/generate_results">Generate Results</a>
+  <a class="" href="/home">Create Project</a>
+  <a class=""  href="/doc_rules">Select Document & Rules</a>
+  <a href="/generate_concept">Generate Concept Seeds</a>
+  <a class="active" href="/generate_thesarus">Generate Thesarus</a>
+  <a  class=""  href="/generate_results">Generate Results</a>
 </div>
 <!--    <div class="row">-->
 <!--        <div class="col-4">-->
