--- a/templates/topic_modelling/generate_concept.html
+++ b/templates/topic_modelling/generate_concept.html
@@ -246,11 +246,11 @@ width: 150px;
 <main>
 
 <div class="topnav ">
-  <a class="" href="/topic_modelling/home">Create Project</a>
-  <a class=""  href="/topic_modelling/doc_rules">Select Document & Rules</a>
-  <a class="active" href="/topic_modelling/generate_concept">Generate Concept Seeds</a>
-  <a href="/topic_modelling/generate_thesarus">Generate Thesarus</a>
-  <a  class=""  href="/topic_modelling/generate_results">Generate Results</a>
+  <a class="" href="/home">Create Project</a>
+  <a class=""  href="/doc_rules">Select Document & Rules</a>
+  <a class="active" href="/generate_concept">Generate Concept Seeds</a>
+  <a href="/generate_thesarus">Generate Thesarus</a>
+  <a  class=""  href="/generate_results">Generate Results</a>
 </div>
 <h2 class="mt-3 px-3">Concept Seeds & Guidelines</h2>
     <h2 class= "px-4 mt-2" style="background-color:#DCDCDC;"><center>INPUT TOPIC/ BIGRAM/TRIGRAM</center></h2>
