--- a/templates/topic_modelling/home.html
+++ b/templates/topic_modelling/home.html
@@ -282,8 +282,8 @@ width: 150px;
         <div class="colums">
           <div class="item">
               <div class="col-md-12">
-                <label >Project Name</label>
-                <div class="col-sm-6">
+                <label class="col-md-6">Project Name</label>
+                <div class="col-md-6">
                           {{ form.projectName}}
                       </div>
                 <!--div class="form-group row">
